Make use of mongodb and vector search to improve performances and efficiency